api get/put/del[cachename][key]
